c1: All warnings removed and backup attribute added in manifes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Kawaii Egg Timer</string>
     <string name="eggimage">EggImage</string>
     <string name="play_stop_button">play stop button</string>
+    <string name="_00_00">00.00</string>
 </resources>
