--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="min00">00</string>
     <string name="colan">:</string>
     <string name="sec00">30</string>
+    <string name="zero">0</string>
+    <string name="_10">10</string>
+    <string name="_0_30">0:30</string>
 </resources>
